# Sentinel-C

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  SETUP.md
src/: .sentinelignore  banner.cpp  banner.h  cli.cpp  cli.h  common.h  config.h  database.cpp  database.h  hasher.cpp  hasher.h  main.cpp  scanner.cpp  scanner.h  security.cpp  security.h  utils.cpp  utils.h
src/commands/: advisor.cpp  common.cpp  common.h  maintenance_ops.cpp  prompt_console.cpp  scan_ops.cpp
src/core/: colors.cpp  colors.h  config.h  directories.cpp  directories.h  fsutil.cpp  fsutil.h  logger.cpp  logger.h  summary.cpp  summary.h  types.h
src/logs/: logger_ext.cpp
src/reports/: cli_report.cpp  csv_report.cpp  html_report.cpp  json_report.cpp
src/scanner/: baseline.cpp  hash.cpp  hash.h  ignore.cpp  ignore.h  scanner.cpp  scanner.h
termux-support/: build-termux.sh
